[package]
name = "kvs"
version = "0.1.0"
authors = ["kanapuli <athavankanapuli@gmail.com>"]
edition = "2018"
description = "An in-memory key value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.0"
predicates = "1.0.4"
clap = "2.33.0"
